fix align items header

--- a/Django/Things/collect/static/collect/css/base.css
+++ b/Django/Things/collect/static/collect/css/base.css
@@ -16,11 +16,12 @@ body {
 
 header {
     width: 100%;
-    position: relative;
+    position: fixed;
     z-index: 1;
     height: 60px;
     border-bottom: 1px solid #6A6D75;
     background-color: white;
+    align-items: center;
 }
 
 #logo {
@@ -62,6 +63,7 @@ nav span a:active {
     width: 50px;
     height: 50px;
 }
+
 
 /* Styling cho user popup */
 
